--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@
     <head>
         <title>Man's Best Friend</title>
     </head>
+    <body>
+        <header>
+            <h1>Man's Best Friend</h1>
+        </header>
+    </body>
 </html>
